--- a/css/front/style2.css
+++ b/css/front/style2.css
@@ -117,13 +117,13 @@ ul.sliders-wrap-inner li img{	padding:0px;	}
 
 
 .lof-slidecontent .button-control {
-   position:absolute;
-   top:10px;
-   right:48%;
+    position:absolute;
+    bottom:10px;
+    right:310px;
     height: 20px;
     width: 20px;
-	cursor:hand; cursor:pointer;
-	background:url(../../images/slide/transparent_bg.png) repeat;
+    cursor:hand; cursor:pointer;
+    background:url(../../images/slide/transparent_bg.png) repeat;
 }
 
 .lof-slidecontent .button-control span { display:block;  width:100%; height:100%;}
