--- a/css/front/style2.css
+++ b/css/front/style2.css
@@ -39,13 +39,15 @@ ul.sliders-wrap-inner li img{	padding:0px;	}
 .lof-slidecontent .slider-description a{ color:#FFF; }
 .lof-slidecontent .slider-description{
 	z-index:100px;
+        display: block;
 	position:absolute;
-	bottom:66px;
-	left:0px;
-	width:400px;
 	background:url(../../images/slide/bg_trans.png);
-	height:120px;
-	padding:10px;
+        width: 200px;
+        height: 300px;
+        top: 0px;
+        left: 0px;
+        overflow: hidden;
+	padding:10px 10px 10px 22px;
 	color:#FFF;
 }
 .lof-slidecontent .slider-description h4 {  color:#FFFFFF;  font-size: 14px;    margin: 10px 0;    padding: 0; }
