--- a/css/front/style_old.css
+++ b/css/front/style_old.css
@@ -672,3 +672,93 @@ p {
     margin-right: 5px;
     font-size: 12px;
 }
+
+.form-admission div{
+    overflow: hidden;
+}
+.form-admission div.row label{
+    width: 150px;
+    float: left;
+    margin-right: 10px;
+    text-align: right;
+    
+    
+}
+.form-admission{
+    font-size: 13px;
+}
+
+.form-admission p.note{
+    color:red;
+    padding: 0px;
+    margin: 3px 0;
+}
+.form-admission span.required{
+    color:red;
+}
+.form-admission div.row{
+    margin: 0 0 5px 0;
+}
+.form-admission table.tb1 td{
+    padding: 3px;
+    margin: 3px;
+}
+.form-admission .errorSummary{
+    border: 1px solid rgb(204, 0, 0);
+    padding: 7px 7px 12px;
+    margin: 0px 0px 20px;
+    background: none repeat scroll 0% 0% rgb(255, 238, 238);
+    font-size: 0.9em;
+}
+.form-admission .errorSummary ul li{
+    margin-left: 20px;
+}
+div.form-admission div.error label, div.form-admission label.error, div.form-admission span.error {
+    color: rgb(204, 0, 0);
+}
+
+div.form-admission  input.error, div.form-admission div.error textarea, div.form-admission div.error select, div.form input.error, div.form-admission textarea.error, div.form-admission select.error {
+    background: none repeat scroll 0% 0% rgb(255, 238, 238);
+    border-color: rgb(204, 0, 0);
+}
+
+div.form-admission .errorMessage {
+    color: red;
+    font-size: 0.9em;
+    text-align: left;
+    margin-left: 40px;
+}
+.date-event {
+    width:60px;
+    height: 59px;
+    background:url(../../images/front/calendar_bg.png) 0 0 no-repeat;
+    float: left;
+    overflow: hidden;
+}
+.date-event h3 {
+    font-family: Verdana, Geneva, sans-serif;
+    color: #FFFFFF;
+    font-size: 16px;
+    padding: 0px;
+    line-height: 1.1em;
+    text-align: center;
+    
+}
+.date-event h5 {
+    font-family: Verdana, Geneva, sans-serif;
+    color: #FFFFFF;
+    font-size: 13px;
+    font-weight: normal;
+    padding: 0;
+    margin-top: 10px;
+    text-align: center;
+}
+
+.date-detile {
+    padding: 0;
+    margin-top: 0;
+    margin-left: 70px;
+    font-size: 0.85em;
+    height: 70px;
+
+}
